fix: event day on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -200,7 +200,12 @@ a {
   }
 
   .event-day {
-    display: none;
+    top: 2rem;
+    left: 2rem;
+    height: 6rem;
+    width: 6rem;
+    font-size: 3.6rem;
+    line-height: 4.4rem;
   }
 
   .event-name {
